--- a/mystyle.css
+++ b/mystyle.css
@@ -1,3 +1,12 @@
-.display-image:hover {
-    box-shadow: 0 5px 30px rgba(0, 0, 0, 0.8);
+.display-image {
+    margin-top: 50px;
+    width: 100px;
+    height: 100px;
+    background: aqua;
+    box-shadow: 0 0 3px 1px rgba(51, 51, 51, 0.5);
+    transition: 0.3s;
+}
+.galary:hover {
+    margin-top: 40px;
+    box-shadow: 0 3px 15px 3px rgba(51, 51, 51, 0.5);
 }
