--- a/mystyle.css
+++ b/mystyle.css
@@ -6,7 +6,7 @@
     box-shadow: 0 0 3px 1px rgba(51, 51, 51, 0.5);
     transition: 0.3s;
 }
-.galary:hover {
+.display-image:hover {
     margin-top: 40px;
     box-shadow: 0 3px 15px 3px rgba(51, 51, 51, 0.5);
 }
